# fastapi-fleamarket

./: pyproject.toml
src/: main.py
