[tool.poetry]
name = "fastapi-fleamarket"
version = "0.1.0"
description = ""
authors = ["masato-210831 <b86500b@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "^0.112.2"
uvicorn = {extras = ["starnderd"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
